# architecting_tools

./: .gitignore  README.md  requirements.txt
first_package/: README.md  pyproject.toml
first_package/lassoreg/: __init__.py  regression.py
first_package/tests/: test_lasso.py
notebooks/: 00_lasso.ipynb  01_decision_trees.ipynb
second_package/: pyproject.toml
second_package/src/decision_tree/: classification.py
server/: model-settings.json  my_lasso.py  settings.json
server/models/: model.pkl
