[build-system]
requires = ["setuptools >= 65", "setuptools_scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "lassoreg"
authors = [{name = "Ramon Perez", email = "ramon.perez@seldon.io"}]
description = "My wonderful Python package"
version = "0.1.0"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "importlib_metadata"
]
keywords = [
    "statistics",
    "lasso",
    "lasso regression",
    "Regression",
    "Model",
    "Statistical Model"
]


[project.urls]
Source = "https://github.com/ramonpzg/architecting_tools/first_package"