[project]
name = "decision_tree"
version = "0.1.0"
description = "This package implements a decision tree classifier."
authors = [
    {name = "Ramon Perez", email = "ramonpzg@protonmail.com"},
]
dependencies = [
    "numpy>=1.26.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
Source = "https://github.com/ramonpzg/architecting_tools/second_package"